style: Set layout and fonts on code boxes in STYLE
Set background colour, margin, padding, and font type and size to make it easy to read the text in the code boxes and make them stand out on the page

--- a/index.html
+++ b/index.html
@@ -74,9 +74,17 @@ Finding your way around
         <div class="text_box">
           <p>Continuing with my self taught frontend development coding journey I have created a series of CSS Cheat sheets. I have gone from how to select an element and position it, to how to style text based content and now I am moving on to the more visual styling components like images.</p>
           <p>Everything covered so far has looked at using images for backgrounds or bullet points so this cheat sheet is covering how to manipulate images when used as multimedia elements.</p>
-          <p>The focus is using filters to apply graphical effects (which can also be used on backgrounds and borders), or by clipping the image.</p>
+          <p>The focus for this cheat sheet is using filters to apply graphical effects (which can also be used on backgrounds and borders), or by clipping the image.</p>
         </div>
         <!--end of text_box-->
+      </section>
+      <!--Section 2 - Filters-->
+      <section id="sect_filters">
+        <header>
+          <h2>Filters...</h2>
+        </header>
+        <!--Section 2 - Filters - Subsection 1 - intro-->
+        <div id="sect_filters_intro" class="subsection_box">
           <!--gallery grid showing the different filter effects can be used as nav menu in addition to the list of text links below-->
           <div id="gallery">
             <ul>
@@ -94,14 +102,6 @@ Finding your way around
             </ul>
           </div>
           <!--end of gallery-->
-      </section>
-      <!--Section 2 - Filters-->
-      <section id="sect_filters">
-        <header>
-          <h2>Filters...</h2>
-        </header>
-        <!--Section 2 - Filters - Subsection 1 - intro-->
-        <div id="sect_filters_intro" class="subsection_box">
           <div class="text_box">
             <div class="code_box">
               <code>
