--- a/index.html
+++ b/index.html
@@ -109,15 +109,6 @@ Finding your way around
               </code>
             </div>
             <!--end of code_box-->
-            <p>Filters can be combined:</p>
-            <div class="code_box">
-              <code>
-                img {<br>
-                filter: contrast (175%) brightness (75%);<br>
-                }
-              </code>
-            </div>
-            <!--end of code_box-->
             <ul class="sub_nav">
               <li><a href="#sect_filters_url">url</a></li>
               <li><a href="#sect_filters_blur">blur</a></li>
@@ -411,6 +402,19 @@ Finding your way around
             <!--example of sepia filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with sepia filter applied" width="250px">
           </figure>
+        </div>
+        <div class="subsection_box">
+          <div class="text_box">
+            <p>Filters can be combined:</p>
+            <div class="code_box">
+              <code>
+                img {<br>
+                filter: contrast (175%) brightness (75%);<br>
+                }
+              </code>
+            </div>
+            <!--end of code_box-->
+          </div><!--end of text_box-->
         </div>
         <!--end of subsection-->
       </section>
