style: figure container and figcaption on STYLE

--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ Finding your way around
           <!--end of text_box-->
           <!--container for image example with applied filter-->
           <figure id="blur_img">
-            <figcaption></figcaption>
+            <figcaption>A blurry kitten...</figcaption>
             <!--example of blur filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with blur filter applied" width="250px">
           </figure>
