--- a/index.html
+++ b/index.html
@@ -669,7 +669,8 @@ Finding your way around
     <!--footer-->
     <footer>
       <div id="about">
-        <p>This project is one in my expanding collection of CSS cheat sheets that I've created on my journey towards becoming a frontend developer. You might also like to see my other creations (there is some sort of method to the madness):</p>
+        <p>This project is one in my expanding collection of CSS cheat sheets that I've created on my journey towards becoming a frontend developer. </p>
+        <p>You might also like to see my other creations (there is some sort of method to the madness):</p>
         <ul>
           <li><a href="#">Cascade &amp; Inheritance</a></li>
           <li><a href="#">Box Model</a></li>
