--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@ Finding your way around
           <div class="text_box">
             <div class="sub_header">
               <h3>blur()</h3>
-              <p>...applies Gaussian blur (does not accept percentages as value)</p>
+              <p>...applies gaussian blur (does not accept percentages as value)</p>
             </div>
             <!--end of subsection header-->
             <div class="code_box">
@@ -165,10 +165,10 @@ Finding your way around
           </div>
           <!--end of text_box-->
           <!--container for image example with applied filter-->
-          <figure id="blur_img">
-            <figcaption>blur of 10%...</figcaption>
+          <figure id="blur_img">            
             <!--example of blur filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with blur filter applied" width="250px">
+            <figcaption>blur of 10px...</figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -192,9 +192,9 @@ Finding your way around
           <!--end of text_box-->
           <!--container for image example with applied filter-->
           <figure id="brightness_img">
-            <figcaption>brightness of 0.25...</figcaption>
             <!--example of brightness filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with brightness filter applied" width="250px">
+            <figcaption>brightness of 0.25...</figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -217,10 +217,10 @@ Finding your way around
           </div>
           <!--end of text_box-->
           <!--container for image example with applied filter-->
-          <figure id="contrast_img">
-            <figcaption>contrast at 30%...</figcaption>
+          <figure id="contrast_img">            
             <!--example of contrast filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with contrast filter applied" width="250px">
+            <figcaption>contrast at 30%...</figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -244,10 +244,10 @@ Finding your way around
           </div>
           <!--end of text_box-->
           <!--container for image example with applied filter-->
-          <figure id="shadow_img">
-            <figcaption></figcaption>
+          <figure id="shadow_img">            
             <!--example of drop-shadow filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with drop-shadow filter applied" width="250px">
+            <figcaption></figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -269,10 +269,10 @@ Finding your way around
           </div>
           <!--end of text_box-->
           <!--container for image example with applied filter-->
-          <figure id="grayscale_img">
-            <figcaption></figcaption>
+          <figure id="grayscale_img">            
             <!--example of grayscale filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with grayscale filter applied" width="250px">
+            <figcaption></figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -295,10 +295,10 @@ Finding your way around
           </div>
           <!--end of text_box-->
           <!--container for image example with applied filter-->
-          <figure id="hue_img">
-            <figcaption></figcaption>
+          <figure id="hue_img">           
             <!--example of hue filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with hue-rotate filter applied" width="250px">
+            <figcaption></figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -322,9 +322,9 @@ Finding your way around
           <!--end of text_box-->
           <!--container for image example with applied filter-->
           <figure id="invert_img">
-            <figcaption></figcaption>
             <!--example of invert filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with invert filter applied" width="250px">
+            <figcaption></figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -347,9 +347,9 @@ Finding your way around
           <!--end of text_box-->
           <!--container for image example with applied filter-->
           <figure id="saturate_img">
-            <figcaption></figcaption>
             <!--example of saturate filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with saturate filter applied" width="250px">
+            <figcaption></figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -358,7 +358,7 @@ Finding your way around
           <div class="text_box">
             <div class="sub_header">
               <h3>opacity()</h3>
-              <p>...changes “see-throughness“ (0% is completely transparent and 100% is unchanged)</p>
+              <p>...changes &quot;see-throughness&quot; (0% is completely transparent and 100% is unchanged)</p>
             </div>
             <!--end of subsection header-->
             <div class="code_box">
@@ -372,10 +372,10 @@ Finding your way around
           </div>
           <!--end of text_box-->
           <!--container for image example with applied filter-->
-          <figure id="opacity_img">
-            <figcaption></figcaption>
+          <figure id="opacity_img"></figure>
             <!--example of opacity filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with opacity filter applied" width="250px">
+            <figcaption></figcaption>
           </figure>
         </div>
         <!--end of subsection-->
@@ -398,9 +398,9 @@ Finding your way around
           <!--end of text_box-->
           <!--container for image example with applied filter-->
           <figure id="sepia_img">
-            <figcaption></figcaption>
             <!--example of sepia filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with sepia filter applied" width="250px">
+            <figcaption></figcaption>
           </figure>
         </div>
         <div class="subsection_box">
@@ -464,7 +464,6 @@ Finding your way around
             <!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="inset_img">
-              <figcaption>Inset clip</figcaption>
               <!--example of inset clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with inset clipping" width="250px">
             </figure>
@@ -488,7 +487,6 @@ Finding your way around
             <!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="circle_img">
-              <figcaption>Circle clip</figcaption>
               <!--example of circle clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with circle clipping" width="250px">
             </figure>
@@ -512,7 +510,6 @@ Finding your way around
             <!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="ellipse_img">
-              <figcaption>Ellipse clip</figcaption>
               <!--example of ellipse clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with ellipse clipping" width="250px">
             </figure>
@@ -537,7 +534,6 @@ Finding your way around
             <!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="polygon_img">
-              <figcaption>Polygon clip</figcaption>
               <!--example of polygon clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with polygon clipping" width="250px">
             </figure>
@@ -560,7 +556,6 @@ Finding your way around
             <!--end of code_box-->
             <!--container for image example with applied filter-->
             <figure id="path_img">
-              <figcaption>Path clip</figcaption>
               <!--example of path clip on example image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with path clipping" width="250px">
             </figure>
@@ -661,7 +656,7 @@ Finding your way around
             </code>
           </div>
           <!--end of code_box-->
-          <p>And don't forget about the <span class="code-word">inherit</span>, <span class="code-word">initial</span> and <span class="code-word">unset</span> values!</p>
+          <p>And don't forget about the <span class="code_word">inherit</span>, <span class="code_word">initial</span> and <span class="code_word">unset</span> values!</p>
         </div>
         <!--end of text_box-->
       </section>
@@ -672,16 +667,16 @@ Finding your way around
         <p>This project is one in my expanding collection of CSS cheat sheets that I've created on my journey towards becoming a frontend developer. </p>
         <p>You might also like to see my other creations (there is some sort of method to the madness):</p>
         <ul>
-          <li><a href="#">Cascade &amp; Inheritance</a></li>
-          <li><a href="#">Box Model</a></li>
-          <li><a href="#">Units &amp; Values</a></li>
-          <li><a href="#">Selectors</a></li>
-          <li><a href="#">Display &amp; Positioning</a></li>
-          <li><a href="#">Flexbox</a></li>
-          <li><a href="#">Grid</a></li>
-          <li><a href="#">Backgrounds</a></li>
-          <li><a href="#">Text &amp; Fonts</a></li>
-          <li><a href="#">Lists &amp; Links</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/GRpRYvq" target="_blank">Cascade &amp; Inheritance</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/KKdgeoJ" target="_blank">Box Model</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/zYGbdJK" target="_blank">Units &amp; Values</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/dyGJRvx" target="_blank">Selectors</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/wvGzrOP" target="_blank">Display &amp; Positioning</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/JjXVMrb" target="_blank">Flexbox</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/bGdjByy" target="_blank">Grid</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/KKgWeoO" target="_blank">Backgrounds</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/xxRjbGR" target="_blank">Text &amp; Fonts</a></li>
+          <li><a href="https://codepen.io/mazonthemoon/full/poRKbZv" target="_blank">Lists &amp; Links</a></li>
         </ul>
       </div>
       <!--end of about page info-->
