--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ Finding your way around
             <!--end of code_box-->
           </div>
           <!--end of text_box-->
-        </div>
+        </div>        
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 3 - blur-->
         <div id="sect_filters_blur" class="subsection_box">
@@ -170,6 +170,11 @@ Finding your way around
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with blur filter applied" width="250px">
             <figcaption>blur of 10px...</figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 4 - brightness-->
@@ -196,6 +201,11 @@ Finding your way around
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with brightness filter applied" width="250px">
             <figcaption>brightness of 0.25...</figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 5 - contrast-->
@@ -222,6 +232,11 @@ Finding your way around
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with contrast filter applied" width="250px">
             <figcaption>contrast at 30%...</figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 6 - drop-shadow-->
@@ -249,6 +264,11 @@ Finding your way around
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with drop-shadow filter applied" width="250px">
             <figcaption></figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 7 - grayscale-->
@@ -274,6 +294,11 @@ Finding your way around
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with grayscale filter applied" width="250px">
             <figcaption></figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 8 - hue-rotate-->
@@ -300,6 +325,11 @@ Finding your way around
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with hue-rotate filter applied" width="250px">
             <figcaption></figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 9 - invert-->
@@ -326,6 +356,11 @@ Finding your way around
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with invert filter applied" width="250px">
             <figcaption></figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 10 - saturate-->
@@ -351,6 +386,11 @@ Finding your way around
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with saturate filter applied" width="250px">
             <figcaption></figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 11 - opacity-->
@@ -372,11 +412,16 @@ Finding your way around
           </div>
           <!--end of text_box-->
           <!--container for image example with applied filter-->
-          <figure id="opacity_img"></figure>
+          <figure id="opacity_img">
             <!--example of opacity filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with opacity filter applied" width="250px">
             <figcaption></figcaption>
           </figure>
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 2 - Filters - Subsection 12 - sepia-->
@@ -414,7 +459,13 @@ Finding your way around
               </code>
             </div>
             <!--end of code_box-->
-          </div><!--end of text_box-->
+          </div>
+          <!--end of text_box-->
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
       </section>
@@ -446,6 +497,11 @@ Finding your way around
             </ul>
           </div>
           <!--end of text_box-->
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 2 - inset-->
@@ -469,6 +525,11 @@ Finding your way around
             </figure>
           </div>
           <!--end of text_box-->
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 3 - circle-->
@@ -492,6 +553,11 @@ Finding your way around
             </figure>
           </div>
           <!--end of text_box-->
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 4 - ellipse-->
@@ -515,6 +581,11 @@ Finding your way around
             </figure>
           </div>
           <!--end of text_box-->
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 5 - polygon-->
@@ -539,6 +610,11 @@ Finding your way around
             </figure>
           </div>
           <!--end of text_box-->
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <div id="sect_clip_path" class="subsection_box">
@@ -561,6 +637,11 @@ Finding your way around
             </figure>
           </div>
           <!--end of text_box-->
+          <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
         </div>
         <!--end of subsection-->
         <!--Section 3 - Clipping - Subsection 7 - clip boxes-->
@@ -626,6 +707,11 @@ Finding your way around
               <!--end of code_box-->
             </div>
             <!--end of text_box-->
+            <!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
           </div>
           <!--end of subsection-->
       </section>
@@ -658,7 +744,12 @@ Finding your way around
           <!--end of code_box-->
           <p>And don't forget about the <span class="code_word">inherit</span>, <span class="code_word">initial</span> and <span class="code_word">unset</span> values!</p>
         </div>
-        <!--end of text_box-->
+        <!--end of text_box--><!--backtotop shortcut-->
+          <div class="backtotop">
+            <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+          </div>
+          <!--end ofbacktotop shortcut-->
+
       </section>
     </main>
     <!--footer-->
