--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Finding your way around
           <div class="text_box">
             <div class="sub_header">
               <h3>brightness()</h3>
-              <p>...as it sounds (0% = black and 100% is unchanged – can also go above 100%!)</p>
+              <p>...as it sounds!</p>
             </div>
             <!--end of subsection header-->
             <div class="code_box">
@@ -199,7 +199,7 @@ Finding your way around
           <figure id="brightness_img">
             <!--example of brightness filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with brightness filter applied" width="250px">
-            <figcaption>brightness of 0.25...</figcaption>
+            <figcaption>brightness of 0.5...</figcaption>
           </figure>
           <!--backtotop shortcut-->
           <div class="backtotop">
@@ -230,7 +230,7 @@ Finding your way around
           <figure id="contrast_img">            
             <!--example of contrast filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with contrast filter applied" width="250px">
-            <figcaption>contrast at 30%...</figcaption>
+            <figcaption>contrast at 200%...</figcaption>
           </figure>
           <!--backtotop shortcut-->
           <div class="backtotop">
@@ -251,7 +251,7 @@ Finding your way around
               <code>
                 img {<br>
                 <span class="code_box_comment">/*filter: drop-shadow(offset-x offset-y blur-radius color);*/</span><br>
-                filter: drop-shadow(5px 5px 2px black); <br>
+                filter: drop-shadow(5px 5px 20px white); <br>
                 }
               </code>
             </div>
@@ -262,7 +262,7 @@ Finding your way around
           <figure id="shadow_img">            
             <!--example of drop-shadow filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with drop-shadow filter applied" width="250px">
-            <figcaption></figcaption>
+            <figcaption>offset white shadow...</figcaption>
           </figure>
           <!--backtotop shortcut-->
           <div class="backtotop">
@@ -292,7 +292,7 @@ Finding your way around
           <figure id="grayscale_img">            
             <!--example of grayscale filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with grayscale filter applied" width="250px">
-            <figcaption></figcaption>
+            <figcaption>100% grayscale...</figcaption>
           </figure>
           <!--backtotop shortcut-->
           <div class="backtotop">
@@ -323,7 +323,7 @@ Finding your way around
           <figure id="hue_img">           
             <!--example of hue filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with hue-rotate filter applied" width="250px">
-            <figcaption></figcaption>
+            <figcaption>A quarter turn on the colour wheel...</figcaption>
           </figure>
           <!--backtotop shortcut-->
           <div class="backtotop">
@@ -354,7 +354,7 @@ Finding your way around
           <figure id="invert_img">
             <!--example of invert filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with invert filter applied" width="250px">
-            <figcaption></figcaption>
+            <figcaption>75% inversion...</figcaption>
           </figure>
           <!--backtotop shortcut-->
           <div class="backtotop">
@@ -384,7 +384,7 @@ Finding your way around
           <figure id="saturate_img">
             <!--example of saturate filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with saturate filter applied" width="250px">
-            <figcaption></figcaption>
+            <figcaption>200% saturation...</figcaption>
           </figure>
           <!--backtotop shortcut-->
           <div class="backtotop">
@@ -415,7 +415,7 @@ Finding your way around
           <figure id="opacity_img">
             <!--example of opacity filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with opacity filter applied" width="250px">
-            <figcaption></figcaption>
+            <figcaption>25% opacity...</figcaption>
           </figure>
           <!--backtotop shortcut-->
           <div class="backtotop">
@@ -445,7 +445,7 @@ Finding your way around
           <figure id="sepia_img">
             <!--example of sepia filter on example image-->
             <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with sepia filter applied" width="250px">
-            <figcaption></figcaption>
+            <figcaption>65% sepia...</figcaption>
           </figure>
         </div>
         <div class="subsection_box">
