style: Set box value clips on image examples
Set box clip example on each image in Box Clip subsections to show the effect applied.

--- a/index.html
+++ b/index.html
@@ -657,6 +657,11 @@ Finding your way around
                   }
                 </code>
               </div>
+              <figure id="margin_img">
+                <figcaption>No clipping...</figcaption>
+                <!--example of margin box clip on image-->
+                <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/content/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with margin box clipping" width="250px">
+              </figure>
               <!--end of code_box-->
             </div>
             <!--end of subsection header-->
