--- a/index.html
+++ b/index.html
@@ -752,7 +752,7 @@ Finding your way around
               <!--example of mask using an image-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/main/assets/kitty.jpg?raw=true" alt="..." width="250px">
             </figure>
-            <figure id="mask_img">
+            <figure id="mask_gradiant">
               <figcaption>Masking with a gradient...</figcaption>
               <!--example of mask using a gradient-->
               <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/main/assets/kitty.jpg?raw=true" alt="..." width="250px">
