style: Add image-mask with linear gradient example styling

--- a/index.html
+++ b/index.html
@@ -750,12 +750,12 @@ Finding your way around
             <figure id="mask_img">
               <figcaption>Masking with an image...</figcaption>
               <!--example of mask using an image-->
-              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/main/assets/kitty.jpg?raw=true" alt="..." width="250px">
+              <div class="mask"></div>
             </figure>
             <figure id="mask_gradiant">
               <figcaption>Masking with a gradient...</figcaption>
               <!--example of mask using a gradient-->
-              <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/main/assets/kitty.jpg?raw=true" alt="..." width="250px">
+              <div class="mask"></div>
             </figure>
           </div>
           <!--end of text_box-->
