--- a/index.html
+++ b/index.html
@@ -380,6 +380,7 @@ Finding your way around
                 img {<br>
                 filter: saturate(200%);<br>
                 }
+              </code>
             </div>
             <!--end of code_box-->
           </div>
@@ -496,8 +497,7 @@ Finding your way around
               <li><a href="#sect_clip_ellipse">ellipse</a></li>
               <li><a href="#sect_clip_polygon">polygon</a></li>
               <li><a href="#sect_clip_path">path</a></li>
-              <li><a href="#sect_clip_box">and by &quot;boxes&quot;...</a>
-              <li>
+              <li><a href="#sect_clip_box">and by &quot;boxes&quot;...</a></li>
             </ul>
           </div>
           <!--end of text_box-->
@@ -661,7 +661,7 @@ Finding your way around
                   }
                 </code>
               </div>
-              <figure id="margin_img">
+              <figure id="no_clip_img">
                 <figcaption>No clipping...</figcaption>
                 <!--example of margin box clip on image-->
                 <img src="https://github.com/MazontheMoon/css_cheatsheet_images/blob/main/assets/kitty.jpg?raw=true" alt="Image of sitting striped kitten with margin box clipping" width="250px">
@@ -724,6 +724,7 @@ Finding your way around
             <!--end ofbacktotop shortcut-->
           </div>
           <!--end of subsection-->
+        </div>
       </section>
       <!--Section 4 - Masking-->
       <section id="sect_masking">
@@ -739,11 +740,11 @@ Finding your way around
             <div class="code_box">
               <code>
                 /*masking not fully supported so a suitable time to use <span class="look-at-me-text">@supports </span>*/<br>
-                  @supports(-webkit-mask-image: url(#mask)) or (mask-image: url#mask)) {<br>
-                    .image {<br>
-                      webkit-mask-image: url(#image);<br>
-                      mask-image: url(#image);<br>
-                  }
+                @supports(-webkit-mask-image: url(#mask)) or (mask-image: url#mask)) {<br>
+                .image {<br>
+                webkit-mask-image: url(#image);<br>
+                mask-image: url(#image);<br>
+                }
               </code>
             </div>
             <!--end of code_box-->
@@ -795,6 +796,16 @@ Finding your way around
           </div>
           <!--end of code_box-->
           <p>And don't forget about the <span class="code_word">inherit</span>, <span class="code_word">initial</span> and <span class="code_word">unset</span> values!</p>
+        </div>
+        <!--end of text_box-->
+        <div class="text_box">
+          <p>This is technically <span class="code-word">html</span> rather than <span class="code-word">css</span> but still a good tip when dealing with <span class="code-word">&lt;img&gt;</span></p>
+          <div class="code_box">
+            <code>
+              &lt;img src=&quot;image.png&quot; loading=&quot;lazy&quot; alt=&quot;..&quot;&gt;
+            </code>
+          </div>
+          <!--end of code_box-->
         </div>
         <!--end of text_box-->
         <!--backtotop shortcut-->
