update: Add image section placeholder on INDEX
Add new button to main nav and subsection placeholder(current content only title)

--- a/index.html
+++ b/index.html
@@ -47,10 +47,11 @@ Finding your way around
 6. Section 4 - Masking
  6.a subsection 1 - intro
  6.b subsection 2 - ...
-7. Section 5 - Best Practices
-8. Footer
-  8.a About
-  8.b Author
+7. Section 5 - image()
+8. Section 6 - Best Practices
+9. Footer
+  9.a About
+  9.b Author
 ------------------------->
 <body>
   <!--Container box-->
@@ -65,6 +66,7 @@ Finding your way around
         <li><a href="#sect_filters">Filter</a></li>
         <li><a href="#sect_clipping">Clip</a></li>
         <li><a href="#sect_masking">Mask</a></li>
+        <li><a href="#sect_image">Mask</a></li>
         <li><a href="#sect_tips">Tips</a></li>
       </ul>
     </nav>
@@ -768,6 +770,25 @@ Finding your way around
         <!--end ofbacktotop shortcut-->
         <!--end of subsection-->
       </section>
+      <!--Section 5 - image()-->
+      <section id="sect_image">
+        <header class="sect_header">
+          <h2>image()</h2>
+        </header>
+        <div class="text_box">
+          <p></p>
+          <div class="code_box">
+            <code></code>
+          </div>
+        </div>
+        <!--backtotop shortcut-->
+        <div class="backtotop">
+          <a class="toplink" href="#top"><i class="far  fa-arrow-alt-circle-up"></i></a>
+        </div>
+        <!--end ofbacktotop shortcut-->
+        <!--end of subsection-->
+      </section>
+
       <!--Section 5 - Best Practices-->
       <section id="sect_tips">
         <header class="sect_header">
