update: Add content to TEXT_CONTENT
Introduction to css image()

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ Finding your way around
         <li><a href="#sect_filters">Filter</a></li>
         <li><a href="#sect_clipping">Clip</a></li>
         <li><a href="#sect_masking">Mask</a></li>
-        <li><a href="#sect_image">Mask</a></li>
+        <li><a href="#sect_image">image()</a></li>
         <li><a href="#sect_tips">Tips</a></li>
       </ul>
     </nav>
@@ -789,7 +789,7 @@ Finding your way around
         <!--end of subsection-->
       </section>
 
-      <!--Section 5 - Best Practices-->
+      <!--Section 6 - Best Practices-->
       <section id="sect_tips">
         <header class="sect_header">
           <h2>Tips and Tricks...</h2>
