--- a/index.html
+++ b/index.html
@@ -776,9 +776,24 @@ Finding your way around
           <h2>image()</h2>
         </header>
         <div class="text_box">
-          <p></p>
+          <p>...similar  to the url() function, but with some additions...</p>
+          <ul>
+            <li>specifying the image's directionality</li>
+            <li>displaying just a part of that image defined by a media fragment</li>
+            <li>specifying a solid color as a fallback/li>
+          </ul>
+          <p>image() can accept 3 optional values:</p>
+          <ul>
+            <li>tag for image directionality (either ltr or rtl)</li>
+            <li>image source</li>
+            <li>color</li>
+          </ul>
           <div class="code_box">
-            <code></code>
+            <code>
+              .img {<br>
+                background-image: image("images/my-image.webp");<br>
+              }
+            </code>
           </div>
         </div>
         <!--backtotop shortcut-->
