style: Layout and text styling applied to new subsection on STYLE

--- a/index.html
+++ b/index.html
@@ -778,9 +778,9 @@ Finding your way around
         <div class="text_box">
           <p>...similar  to the url() function, but with some additions... </p>
           <ul>
-            <li>specifying the image's directionality</li>
-            <li>displaying just a part of that image defined by a media fragment</li>
-            <li>specifying a solid color as a fallback/li>
+            <li>...specifying the image's directionality</li>
+            <li>...displaying just a part of that image defined by a media fragment</li>
+            <li>...specifying a solid color as a fallback/li>
           </ul>
           <p>image() can accept 3 optional values:</p>
             <ul>
